# experiments

./: .vercelignore
002/: README.md
003/: README.md  build.gradle.kts  local.properties  settings.gradle.kts
004/: README.md
005/: README.md
006/: .gitignore  README.md  docker-compose.yml  env_vars.py  extract_values.py  fetch_datapoints.py  fetch_logs.py  fetch_logs_v2.py  fft_sample.py  figures.py  get_elastic_data.py  get_elastic_query_body.py  get_fft.py  get_raw_data.py  get_running_window_samples.py  get_samples.py  get_sliding_data.py  hello.py  intro.py  model.py  parse_raw_data.py  plot-running-window.py  plot.py  prepare_samples.py  requirements.txt  save_data_points.py  search_logs.py  show_sample_with_fft.py  test.py  to_frequency_domain.py  train.py  train_v2.py  train_with_fft.py
007/: .env  Cargo.toml  README.md
007/src/: erc721_abi.json  lib.rs  main.rs
008/: README.md  jest.config.cjs  package-lock.json  package.json
009/: .dockerignore  .gitignore  Dockerfile  Dockerfile.alt1  README.md  deno.github.workflow.yml  deno.json  docker-compose.yaml  handlers.md  tsconfig.json
010/: README.md  package-lock.json  package.json
011/: README.md
012/: .swcrc  README.md  app.js  package-lock.json  package.json
014/: README.md  package.json
015/: README.md
016/: readme.md
017/: README.md
018/: README.md
codeoptimizer/: CHANGELOG.md  README.md  package-lock.json  package.json
jamclout-svelte/: houdini.config.js  package-lock.json  package.json  schema.graphql  svelte.config.js
micro-FE/: README.md  package-lock.json  package.json
(+445 files in other folders)
