[package]
name = "ethereal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = "0.17.0"
tokio = { version = "1.17.0", features = ["full"] }
dotenv = "0.15.0"
mongodb = "2.1.0"
serde = "1.0.136"
ethabi = "16.0.0"